<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/purple_500"/>

    <View
        android:id="@+id/view2"
        android:layout_below="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/wave"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_picture"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_baseline_person_24" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/profile_picture"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_toStartOf="@+id/profile_picture"
        android:layout_toLeftOf="@+id/profile_picture"
        android:padding="15dp"
        android:text="@string/welcome_to_your_profile"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view2"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="48dp"
        android:text="@string/username"
        android:textColor="@color/black"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_baseline_person_24_gray"
        android:drawableLeft="@drawable/ic_baseline_person_24_gray"
        android:drawablePadding="16dp"
        android:drawableTint="@color/purple_500"
        android:padding="16dp"
        tools:targetApi="m" />


    <EditText
        android:id="@+id/profile_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:layout_below="@id/profile_name"
        android:text="@string/email"
        android:textColor="@color/black"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="16dp"
        android:drawableTint="@color/purple_500"
        android:padding="16dp"
        tools:targetApi="m" />

    <Button
        android:id="@+id/profile_sign_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_below="@+id/profile_email"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_bg"
        android:text="@string/sign_out"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:background="@color/purple_500"/>

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_above="@+id/view3"
        android:layout_marginBottom="50dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/wave"
        android:backgroundTint="@color/white"
        tools:targetApi="m"/>


</RelativeLayout>